--- a/app/src/main/res/layout/activity_edit_todo.xml
+++ b/app/src/main/res/layout/activity_edit_todo.xml
@@ -13,19 +13,17 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/create_new_todo"
+        android:text="@string/edit_your_todo"
         android:textSize="32sp"
         android:textColor="@color/black"/>
 
     <EditText
-        android:id="@+id/edtText_newTodo"
+        android:id="@+id/edtText_edit_todo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:hint="@string/type_the_todo_title"
-        android:gravity=""
         android:inputType="text" />
 
     <Button
@@ -33,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edtText_newTodo"
-        android:text="@string/create_todo"/>
+        app:layout_constraintTop_toBottomOf="@id/edtText_edit_todo"
+        android:text="@string/edit_todo"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
