--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -10,6 +10,7 @@
     android:layout_marginHorizontal="16dp">
 
     <RelativeLayout
+        android:id="@+id/todo_box"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="8dp">
