Replace unnecessary activities with fragments

--- a/app/src/main/res/layout/fragment_create_todo.xml
+++ b/app/src/main/res/layout/fragment_create_todo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="32dp"
-    tools:context=".CreateTodoActivity">
+    tools:context=".view.create.CreateTodoFragment">
 
     <TextView
         android:id="@+id/textview_create_todo"
@@ -13,17 +13,19 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/edit_your_todo"
+        android:text="@string/create_new_todo"
         android:textSize="32sp"
         android:textColor="@color/black"/>
 
     <EditText
-        android:id="@+id/edtText_edit_todo"
+        android:id="@+id/edtText_newTodo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:hint="@string/type_the_todo_title"
+        android:gravity=""
         android:inputType="text" />
 
     <Button
@@ -31,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edtText_edit_todo"
-        android:text="@string/edit_todo"/>
+        app:layout_constraintTop_toBottomOf="@id/edtText_newTodo"
+        android:text="@string/create_todo"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
